// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home/> Snapshot renders without crashing using mount 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 1.5em;
  font-size: 1.25em;
}

.c2 > * {
  margin-bottom: 0.3em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c3 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c4 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  background-position: top right 30%;
  background-image: linear-gradient( rgba(0,0,0,0.6),rgba(0,0,0,0.6) ),url(test-file-stub);
  background-size: cover;
  color: #D4D4C8;
  padding-top: 7em;
  padding-bottom: 4.5em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 30px;
}

<Home>
  <styled.section
    id="home"
  >
    <section
      className="c0"
      id="home"
    >
      <h1>
        Israel Deorce
      </h1>
      <styled.p
        className="subtitle"
      >
        <p
          className="c1 subtitle"
        >
          subtitle
        </p>
      </styled.p>
      <ExternalButtons>
        <styled.div>
          <div
            className="c2"
          >
            <UIButton
              id="blog-button"
              label="button.visit_my_blog"
              onClick={[Function]}
            >
              <styled.button
                onClick={[Function]}
                secondary={false}
              >
                <button
                  className="c3"
                  onClick={[Function]}
                >
                  <span>
                    button.visit_my_blog
                  </span>
                </button>
              </styled.button>
            </UIButton>
            <UIButton
              id="resume-button"
              label="button.resume"
              onClick={[Function]}
              rightIcon={<FaGoogleDrive />}
              secondary={true}
            >
              <styled.button
                onClick={[Function]}
                secondary={true}
              >
                <button
                  className="c4"
                  onClick={[Function]}
                >
                  <span>
                    button.resume
                  </span>
                  <FaGoogleDrive>
                    <IconBase
                      attr={
                        Object {
                          "viewBox": "0 0 512 512",
                        }
                      }
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
                          key="0"
                        />
                      </svg>
                    </IconBase>
                  </FaGoogleDrive>
                </button>
              </styled.button>
            </UIButton>
          </div>
        </styled.div>
      </ExternalButtons>
    </section>
  </styled.section>
</Home>
`;

exports[`<Home/> Snapshot renders without crashing using render 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 1.5em;
  font-size: 1.25em;
}

.c2 > * {
  margin-bottom: 0.3em;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c3 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c4 > *:not(:last-child) {
  padding-right: 0.25em;
}

.c0 {
  background-position: top right 30%;
  background-image: linear-gradient( rgba(0,0,0,0.6),rgba(0,0,0,0.6) ),url(test-file-stub);
  background-size: cover;
  color: #D4D4C8;
  padding-top: 7em;
  padding-bottom: 4.5em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 30px;
}

<section
  class="c0"
  id="home"
>
  <h1>
    Israel Deorce
  </h1>
  <p
    class="c1 subtitle"
  >
    subtitle
  </p>
  <div
    class="c2"
  >
    <button
      class="c3"
    >
      <span>
        button.visit_my_blog
      </span>
    </button>
    <button
      class="c4"
    >
      <span>
        button.resume
      </span>
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
        />
      </svg>
    </button>
  </div>
</section>
`;

exports[`<Home/> Snapshot renders without crashing using shallow 1`] = `
<styled.section
  id="home"
>
  <h1>
    Israel Deorce
  </h1>
  <styled.p
    className="subtitle"
  >
    subtitle
  </styled.p>
  <ExternalButtons />
</styled.section>
`;
